fix sidebar covering page content

--- a/css/global.css
+++ b/css/global.css
@@ -15,4 +15,9 @@ main {
     left: 0px;
     width: 100%;
     height: 100vh;
+    pointer-events: none;
+}
+
+#sidebar_and_header_container>* {
+    pointer-events: initial;
 }
