--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -3,10 +3,16 @@
     padding: 0;
 }
 
+#sidebar {
+    height: 100%;
+    width: max-content;
+    pointer-events: none;
+}
+
 .container {
     font-family: "Dosis", sans-serif;
-    width: 50%;
-    height: 100vh;
+    height: 100%;
+    pointer-events: none;
 }
 
 .navbar {
@@ -25,11 +31,13 @@
     position: relative;
     transform: translateX(-100%);
     transition: transform 300ms ease;
-    box-shadow: 0 2px 4px rgb(0 0 0 / 50%)
+    box-shadow: 0 2px 4px rgb(0 0 0 / 50%);
+    pointer-events: none;
 }
 
 .navbar-open {
     transform: translateX(0%);
+    pointer-events: initial;
 }
 
 .nav-link {
